--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,7 @@
   }
 
   .dark {
-    --background: 224 71% 4%;
+    --background: 240 39% 11%;
     --foreground: 213 31% 91%;
 
     --muted: 223 47% 11%;
@@ -76,8 +76,6 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings:
-      "rlig" 1,
-      "calt" 1;
+    font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
