feat: adding pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,11 +33,11 @@
 
     --ring: 215 20.2% 65.1%;
 
-    --radius: 0.8rem;
+    --radius: 0.7rem;
   }
 
   .dark {
-    --background: 240 39% 11%;
+    --background: 240 30% 8%;
     --foreground: 213 31% 91%;
 
     --muted: 223 47% 11%;
@@ -66,7 +66,7 @@
 
     --ring: 216 34% 17%;
 
-    --radius: 0.8rem;
+    --radius: 0.7rem;
   }
 }
 
@@ -76,6 +76,8 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
   }
 }
