--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,10 +74,14 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
     font-feature-settings:
       "rlig" 1,
       "calt" 1;
+
+    /* Prevents bouncy behavior on iOS phones */
+    overscroll-behavior-y: none;
   }
 }
